Added one missing participant

--- a/2019-01-28/index.html
+++ b/2019-01-28/index.html
@@ -54,7 +54,7 @@
                       <dt>Scribe</dt>
                       <dd>Karol Szczepański</dd>
                       <dt>Present</dt>
-                      <dd>Karol Szczepański, Tomasz Pluskiewicz</dd>
+                      <dd>Karol Szczepański, Tomasz Pluskiewicz, Brecht Van de Vyvere</dd>
                       <dt>Audio Log</dt>
                       <dd>
                         <audio controls="controls" preload="none">
